TEST_PROGRAMS/INVALID/justin_domignue/invalid-5.min
# Identifier is invalid
var 123Identifier: float;

